--- a/TODO.org
+++ b/TODO.org
@@ -1,33 +1,40 @@
-* General
-** Handle units
-*** DONE Implement unit systems
-    CLOSED: [2017-12-21 Thu 18:04]
-*** Upon reading mesh node coordinate needs to be multiplied by units
-** Adaptive mesh refinement
-*** DONE Make PressureSolver and Wells work with refined mesh
-    CLOSED: [2017-12-22 Fri 18:36]
-    Info on how to handle: https://www.dealii.org/8.4.0/doxygen/deal.II/step_46.html
-** 3D bitmap input
-*** DONE Write code for treating bitmap input
-    CLOSED: [2017-12-21 Thu 18:02]
-*** Test 3D heterogeneous bitmap
-** Parallelize
-*** Use trilinos parallel classes
-*** DONE Properly extract fevalues
-    CLOSED: [2017-12-22 Fri 18:37]
-*** TODO Properly distribute into the stiffness matrix
-*** Locate wellbore on cell interfaces between two processes
+* Physics
+** Multiphase
+*** Input
+*** wells
+*** solver
+** Geomechanics
+*** Elasticity
+*** Plasticity
+* Input
+** include, bitmap, keywords
+* Units
+** DONE Implement unit systems
+   CLOSED: [2017-12-21 Thu 18:04]
+** Upon reading mesh node coordinate needs to be multiplied by units
+* Adaptive mesh refinement
+** DONE PressureSolver and Wells work with refined mesh
+   CLOSED: [2017-12-22 Fri 18:36]
+   Info on how to handle: https://www.dealii.org/8.4.0/doxygen/deal.II/step_46.html
+* 3D bitmap input
+** DONE Implement
+** Test 3D heterogeneous bitmap
+* Parallelize
+** DONE Use trilinos parallel classes
+** DONE Properly extract fevalues
+   CLOSED: [2017-12-22 Fri 18:37]
+** DONE Properly distribute into the stiffness matrix
+** DONE Locate wellbore on cell interfaces between two processes
 
 
- Use cell->point_inside() to check if wellbore is in a cell
-** Wells
-*** Well segment function is either inaccurate or slow
-** Problems
-*** DONE Inclined well calculation is wrong
-    CLOSED: [2017-12-21 Thu 18:03]
-*** DONE How to properly distribute flux between wells
-    CLOSED: [2017-12-21 Thu 18:03]
-*** I am calculating face transmissibilities twice!
-*** Pieceman formula valid only for r << r_pieceman
-    add check as a runtime parameter!!!!
-*** DONE G vector: should I additionally multiply by cell normal?
+Use cell->point_inside() to check if wellbore is in a cell
+* Problems
+** Well segment function is either inaccurate or slow
+** DONE Inclined well calculation is wrong
+   CLOSED: [2017-12-21 Thu 18:03]
+** DONE How to properly distribute flux between wells
+   CLOSED: [2017-12-21 Thu 18:03]
+** I am calculating face transmissibilities twice!
+** Pieceman formula valid only for r << r_pieceman
+   add check as a runtime parameter!!!!
+** DONE G vector
