--- a/TODO.org
+++ b/TODO.org
@@ -1,21 +1,30 @@
 * Physics
 ** Multiphase
-*** Input
-*** wells
+*** DONE Input
+    CLOSED: [2018-01-26 Fri 00:00]
+*** DONE wells
+    CLOSED: [2018-01-26 Fri 00:00]
 *** solver
+*** Saturation impes solver asssembly
+*** One base class for multiphase and geomechanics
+*** Inheritance for pressure value and saturation values
 ** Geomechanics
 *** Elasticity
 *** Plasticity
-* Input
-** include, bitmap, keywords
 * Units
 ** DONE Implement unit systems
    CLOSED: [2017-12-21 Thu 18:04]
-** Upon reading mesh node coordinate needs to be multiplied by units
+** DONE Upon reading mesh node coordinate needs to be multiplied by units
+   CLOSED: [2018-01-25 Thu 23:57]
+** Output units
+** Field report geometry Units
+** Units in bitmap
 * Adaptive mesh refinement
 ** DONE PressureSolver and Wells work with refined mesh
    CLOSED: [2017-12-22 Fri 18:36]
    Info on how to handle: https://www.dealii.org/8.4.0/doxygen/deal.II/step_46.html
+** Refinement at saturation fronts
+** Initial refinement at water-oil-contact
 * 3D bitmap input
 ** DONE Implement
 ** Test 3D heterogeneous bitmap
