--- a/TODO.org
+++ b/TODO.org
@@ -6,6 +6,8 @@
 ** DONE Harmonic Mean for transmissibility should take cell sizes into account
    CLOSED: [2018-01-31 Wed 12:15]
 ** TODO Arithmetic mean for properties should take cell sizes into account
+** Make impes solver have only one owned solution
+   have solution instead of pressure_solution and saturation_solution
 * Physics
 ** Multiphase
 *** DONE Input
