--- a/TODO.org
+++ b/TODO.org
@@ -1,15 +1,19 @@
 
 * General
 ** TODO Model should decide which phase is oil water or gas, not cellvalues
-** Merge SaturationSolver and PressureSolver into FLuidSolverIMPES
+** DONE Merge SaturationSolver and PressureSolver into FLuidSolverIMPES
+   CLOSED: [2018-02-16 Fri 18:20]
 ** Simulator should take model as an argument
 ** DONE Harmonic Mean for transmissibility should take cell sizes into account
    CLOSED: [2018-01-31 Wed 12:15]
 ** TODO Arithmetic mean for properties should take cell sizes into account
-** Make impes solver have only one owned solution
+** DONE Make impes solver have only one owned solution
+   CLOSED: [2018-02-16 Fri 18:20]
    have solution instead of pressure_solution and saturation_solution
-** Allow creating cubic mesh with n_elements and dimensions
+** DONE Allow creating cubic mesh with n_elements and dimensions
+   CLOSED: [2018-02-16 Fri 18:20]
    also allow mesh file keyword
+** Put CellValues into ConstitutiveModel namespace and rename it into .., make ExtraValues callse CellValues
 * Physics
 ** Multiphase
 *** DONE Input
@@ -22,7 +26,8 @@
     CLOSED: [2018-02-10 Sat 12:58]
 *** TODO normalize wells by segment in phase controlled injectors
 ** Geomechanics
-*** Elasticity
+*** DONE Elasticity
+    CLOSED: [2018-02-16 Fri 18:21]
 *** Plasticity
 * Units
 ** DONE Implement unit systems
@@ -41,6 +46,8 @@
 ** Initial refinement at water-oil-contact
 * 3D bitmap input
 ** DONE Implement
+** DONE Test 1D bitmap
+   CLOSED: [2018-02-16 Fri 18:21]
 ** Test 3D heterogeneous bitmap
 * DONE Parallelize
   CLOSED: [2018-02-10 Sat 13:00]
@@ -48,4 +55,4 @@
 ** Well segment function is either inaccurate or slow
 ** I am calculating face transmissibilities twice!
 ** Pieceman formula valid only for r << r_pieceman
-   add check as a runtime parameter!!!!
+   add check as a runtime parameter, impose constraints if cell is too small !!!!
