--- a/TODO.org
+++ b/TODO.org
@@ -13,7 +13,7 @@
 ** DONE Allow creating cubic mesh with n_elements and dimensions
    CLOSED: [2018-02-16 Fri 18:20]
    also allow mesh file keyword
-** Put CellValues into ConstitutiveModel namespace and rename it into .., make ExtraValues callse CellValues
+** Put FluidEquations into ConstitutiveModel namespace and rename it into .., make ExtraValues callse FluidEquations
 * Physics
 ** Multiphase
 *** DONE Input
